# AIE7

./: .gitignore
11_Certification_Challenge/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  report.md
11_Certification_Challenge/data/: Mental-Models-for-the-Intelligence-Age-Skillenai.md
11_Certification_Challenge/data/experiments/: score_aggs_combined_096bef9f-dff4-4a70-9cb2-0735ac3ad1e7.csv  score_aggs_combined_52aba02c-f683-4a07-a6f1-5bab2c385509.csv  score_aggs_combined_dd79c2ed-6d01-488b-8433-78373d295de0.csv  score_df_096bef9f-dff4-4a70-9cb2-0735ac3ad1e7.csv  score_df_52aba02c-f683-4a07-a6f1-5bab2c385509.csv  score_df_dd79c2ed-6d01-488b-8433-78373d295de0.csv
11_Certification_Challenge/data/sdg/: testset.csv
11_Certification_Challenge/notebooks/: Analyze Experiments.ipynb  Chunker Test.ipynb  Run Experiments copy 2.ipynb  Run Experiments copy.ipynb  Run Experiments.ipynb
11_Certification_Challenge/requirements/: AIE7 Cert Challenge Rubric - Student.csv  Certification Challenge Instructions.md
11_Certification_Challenge/scripts/: README.md  run_supervisor.py  url2text.py
11_Certification_Challenge/src-kiro/: __init__.py  main.py
11_Certification_Challenge/src-kiro/agents/: __init__.py  base.py
11_Certification_Challenge/src-kiro/models/: __init__.py  data_models.py  state.py
11_Certification_Challenge/src-kiro/services/: __init__.py  document_processor.py  response_synthesizer.py
11_Certification_Challenge/src-kiro/utils/: __init__.py  config.py
11_Certification_Challenge/vector_db/: meta.json
(+60 files in other folders)
