[project]
name = "11-certification-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.19",
    "langchain-cohere==0.4.4",
    "cohere>=5.12.0,<5.13.0", 
    "langchain-openai>=0.3.7",
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "langchain-qdrant>=0.2.0",  
    "ragas==0.2.10",
    "unstructured>=0.14.8",
    "nltk==3.8.1",
    "pymupdf>=1.26.3",
    "langchain-community>=0.3.16",
    "langchain-openai>=0.3.3",
    "langgraph>=0.2.69",
    "numpy>=2.2.2",
    "ragas==0.2.10",
    "unstructured>=0.14.8",
    "pymupdf>=1.26.3",
    "rapidfuzz>=3.0.0",
    "langsmith>=0.0.104",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",

]
